# ipython-physics

./: README.md  README.txt  ipython_physics.py  physics.py  pyproject.toml  test_prefilter.py
